--- a/composer.json
+++ b/composer.json
@@ -1,35 +1,56 @@
 {
-    "name": "xthiago/pdf-version-converter",
-    "description": "PHP library for converting the version of PDF files (for compatibility purposes).",
-    "keywords": ["pdf", "converter", "version converter", "pdf version converter", "pdf version"],
-    "license": "MIT",
-    "type": "library",
-    "minimum-stability" : "stable",
-    "authors": [
-        {
-            "name": "Thiago Rodrigues",
-            "email": "xthiago@gmail.com"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "Xthiago\\PDFVersionConverter\\": [
-                "src/",
-                "tests/"
-            ]
-        }
-    },
-    "require": {
-        "php": ">=5.3.0",
-        "symfony/filesystem": "^2.3|^3|^4",
-        "symfony/process": "^2.3|^3|^4"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~4.5"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
+  "name": "xthiago/pdf-version-converter",
+  "description": "PHP library for converting the version of PDF files (for compatibility purposes).",
+  "keywords": [
+    "pdf",
+    "converter",
+    "version converter",
+    "pdf version converter",
+    "pdf version"
+  ],
+  "license": "MIT",
+  "type": "library",
+  "minimum-stability": "stable",
+  "authors": [
+    {
+      "name": "Thiago Rodrigues",
+      "email": "xthiago@gmail.com"
     }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Xthiago\\PDFVersionConverter\\": [
+        "src/",
+        "tests/"
+      ]
+    }
+  },
+  "require": {
+    "php": ">=5.3.0",
+    "symfony/filesystem": "^2.3|^3|^4",
+    "symfony/process": "^2.3|^3|^4"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^8.4.3",
+    "doctrine/coding-standard": "^6.0.0",
+    "jakub-onderka/php-parallel-lint": "^1.0.0",
+    "phpstan/phpstan": "^0.11.19",
+    "phpstan/phpstan-phpunit": "^0.11.2"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0-dev"
+    }
+  },
+  "scripts": {
+    "test": [
+      "parallel-lint . --exclude vendor",
+      "phpcs",
+      "phpstan analyse",
+      "phpunit"
+    ],
+    "coverage": [
+      "phpunit --coverage-html reports/"
+    ]
+  }
 }
